1주차 스터디 내용 다시정리

--- a/_posts/2020-07-10-github-2.md
+++ b/_posts/2020-07-10-github-2.md
@@ -1,85 +1,145 @@
 ---
 layout: post
-title: git 기본사용서
+title: github 기본 사용방법
+category: git
 tags: [git]
+comments: true
 ---
 
 > 자세한 설명은 생략합니다.<br>
 > 이 글은 편의를 위한 글 입니다.<br> > [초보 몽키](https://wayhome25.github.io/git/2017/07/08/git-first-pull-request-story/)님의 블로그에 아주 상세하게 적혀있습니다. <br><br>
-> 수정예정.. 
 
-# 목차
+# 개인 프로젝트하며 혼자 깃허브를 다룰때 사용하는 방식
 
-[1.git push](#git-push)<br>
-[2.현업 할때](#현업-할때)<br>
-[3.rebase에대한 개인적인 정리..](#rebase에대한-개인적인-정리..)<br>
+## git push
 
-## 1 git push
+> 순서대로 진행합니다.
 
-> 순서대로 진행
+```
+ Git init
+```
 
-1.  ```
-    Git init
-    ```
+- 루트디렉토리에 .gitignore 파일 생성
 
-2.  루트디렉토리에 .gitignore 파일 생성
+  - 파일안에 node_moduls 작성 및 github에 올리고싶지않은 폴더명 작성
 
-    - 파일안에 node_moduls 작성 및 github에 올리고싶지않은 폴더명 작성
+```
+  git remote add origin "https://github.com/wjdwndtlr/travel"
+```
 
-3.  ```
-    git remote add origin "https://github.com/wjdwndtlr/travel"
-    ```
+- " "를 지우고 방금 만든 깃허브 레포지토리 주소를 복붙해준다.
 
-    - " "를 지우고 방금 만든 깃허브 레포지토리 주소를 복붙해준다.
+```
+  git add .
+```
 
-4.  ```
-    git add .
-    ```
+```
+  git commit -m "initial commit"
+```
 
-5.  ```
-    git commit -m "initial commit"
-    ```
+```
+  git push origin master
+```
 
-6.  ```
-    git push origin master
-    ```
+- origin은 서버를 뜻한다.
 
-## 2 현업 할때
+- 여기서 서버는 깃허브홈페이지를 말한다.
+  - 정확하게는 깃헙에 있는 코드의 원격 저장소 위치이다.
 
-1.  ```
-    git branch feature/"명칭"
-    git checkout feature/2
-    ```
+---
 
-    - 브런지를 따준다.
+# 협동프로젝트에서 다른 사람이 작업한걸 가져올때
 
-    - 브런치 이름은 feature가 기본이고 / 이후엔 임의로 적는다.
+> 나는 작업하지않고 가져오기만할때 하는 방식입니다.<br>
+> 이 외에도 혹시 누군가 작업한게 있을 수 있으니,`rebase`하여 마스터를 최신화시킨후, pull해줍니다.
 
-2.  ```
-    git rebase master
-    ```
+```
+git checkout master
+git rebase master
+git pull origin matser
+```
 
-3)  ```
-    git log
-    ```
+- pull은 무조건 마스터 브런치에서 해야한다.
 
-    - 생략 가능
+---
 
-4)  ```
-    git push origin feature/2
-    ```
+# 협동 작업할 때 사용하는 방식
 
-5. 깃허브 사이트에서 Pull Request 생성
+> 순서대로 진행합니다.
 
-6. 코드리뷰 & Merge Pull Reqest
+## 깃 브런치 따기
 
-7. 동기화 및 branch 삭제
+```
+ git branch feature/git2
+ git checkout feature/git2
+```
 
-```js
-# 코드 동기화
-$ git pull real-blog(remote 별명)
-# 브랜치 삭제
-$ git branch -d develop(브랜치 별명)
+- master 브런치에서 각자 브런치를 따서 작업한다.`반드시 작업전에 브런치를 먼저 따고 작업한다!`
+
+- 브런치 이름은 feature가 기본이고 슬레쉬 `/` 이후엔 임의로 이름을 적는다.
+
+- 여기선 git2 로 설정했다.
+
+```
+git status
+```
+
+- git status로 현재 깃의 상태를 확인한다.
+
+> your branch is up to date with 'origin/master'이란 문구가뜬다면 아직 만들어진 브런치로 이동되지않은것이다.<br>
+> 이럴땐 `git checkout feature/git2`를 입력하여 해당 브런치로 이동시켜주자
+
+- git status를 브런치를 생성하거나, 바꾸거나, 삭제할때마다 사용해주면 현재 깃의 상태를 알 수 있어서 에러와 충돌을 사전에 방지할 수 있어 자주 사용해주는게 좋다.
+
+## git commit, checkout master
+
+```
+git commit -m "깃 작업완료"
+git checkout master
+```
+
+- 작업 완료후 commit를 해준다.
+
+- 마스터 브런치로 이동한다.
+  - `작업했던 내용이 마스터브런치로 올라가진다.`
+
+## git rebase,git push
+
+```
+git checkout feature/git2
+git rebase master
+```
+
+- 위에서 생성한 브런치로 이동한다.
+
+- rebase하여 마스터브런치를 최신화 시켜준다.
+
+```
+git push origin feature/git2
+```
+
+- 깃허브 서버에 작업물을 올린다.
+
+## git pull request후 코드리뷰 & Merge
+
+- 작업하는 깃헙 사이트로가면 맨 위 상단에 아래 사진이나온다. Compare & Pull request 버튼을 클릭해주면
+  <img src="https://media.vlpt.us/images/wndtlr1024/post/aa4b0911-6158-447d-8879-71662494aa7e/image.png" alt="views">
+
+- 아래 화면이 나오는데,base repository가 내가올리려는 깃허브 레포지토리와 맞는지 확인해준다.
+
+    <img src="https://media.vlpt.us/images/wndtlr1024/post/316bb90f-0570-4cb3-b6f7-4a4e469f54f9/image.png" alt="views">
+
+- 어떤 작업을했는지 내용을 입력후 Create pull request를 눌러준다.
+
+- 이어서 Merge Pull Request를 눌러준후,브런치 delete 버튼을 눌러 `깃허브에서 작업브런치를 삭제`해준다.
+
+  - Merge Pull Request버튼을 눌러주는건 보통 관리자나 팀의 리더가 코드를 확인후 해준다.
+
+## 로컬에서 브런치삭제
+
+```
+git checkout master
+git branch -D feature/git2
 ```
 
 ## rebase에대한 개인적인 정리..
